# Copyright © 2024 Stephan Kunz
[package]
name = "liveliness"
rust-version = "1.81.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Liveliness example"
publish = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[[bin]]
name = "liveliness"
path = "src/liveliness.rs"

[dependencies]
#dimas = { version = "0.4.0", features = ["unstable"] }
dimas = { path = "../../dimas/dimas", features = ["unstable"] }

[build-dependencies]

[dev-dependencies]

