# Copyright © 2024 Stephan Kunz
[package]
name = "observation"
rust-version = "1.81.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Observer/Observable example"
publish = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[[bin]]
name = "observer"
path = "src/observer.rs"

[[bin]]
name = "observable"
path = "src/observable.rs"

[dependencies]
dimas = { version = "0.4.0", features = ["unstable"] }

[build-dependencies]

[dev-dependencies]
