# Copyright © 2024 Stephan Kunz
[package]
name = "queries"
rust-version = "1.81.0"
edition = "2021"
version = "0.4.0"
license = "MIT OR Apache-2.0"
description = "Queryable/Query example"
publish = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[[bin]]
name = "queryable"
path = "src/queryable.rs"

[[bin]]
name = "querier"
path = "src/querier.rs"

[dependencies]
dimas = { version = "0.4.0", features = ["unstable"] }

[build-dependencies]

[dev-dependencies]
