# Copyright © 2024 Stephan Kunz
[package]
name = "router"
edition = "2021"
description = "Router example"
license = "MIT OR Apache-2.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
#unused="allow" # for dev only

[lints.rustdoc]
private_intra_doc_links = "allow"

[lints.clippy]
enum_glob_use = "deny"
needless_pass_by_value = "allow"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[dependencies]
dimas = { version = "0.4.0", features = ["unstable"] }

[build-dependencies]

[dev-dependencies]
