# Copyright © 2024 Stephan Kunz
[package]
name = "sessions"
edition = "2021"
description = "Sessions example"
license = "MIT OR Apache-2.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
#unused="allow" # for dev only

[lints.rustdoc]
private_intra_doc_links = "allow"

[lints.clippy]
enum_glob_use = "deny"
needless_pass_by_value = "allow"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[[bin]]
name = "agent1"
path = "src/agent1.rs"

[[bin]]
name = "agent2"
path = "src/agent2.rs"

[[bin]]
name = "agent3"
path = "src/agent3.rs"

[[bin]]
name = "agent4"
path = "src/agent4.rs"

[dependencies]
dimas = { version = "0.4.1", features = ["unstable"] }
hostname = "0.4.0"

[build-dependencies]

[dev-dependencies]
