# Copyright © 2024 Stephan Kunz
[package]
name = "sessions"
edition = "2021"
description = "Sessions example"
license = "MIT OR Apache-2.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
#unused="allow" # for dev only

[lints.rustdoc]
private_intra_doc_links = "allow"

[lints.clippy]
enum_glob_use = "deny"
needless_pass_by_value = "allow"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[[bin]]
name = "combined_agent"
path = "src/combined_agent.rs"

[[bin]]
name = "local_agent"
path = "src/local_agent.rs"

[[bin]]
name = "network_agent"
path = "src/network_agent.rs"

[[bin]]
name = "tls_agent"
path = "src/tls_agent.rs"

[dependencies]
dimas = { version = "0.5.0", features = ["unstable"] }
hostname = "0.4.0"

[build-dependencies]

[dev-dependencies]
