# Copyright © 2024 Stephan Kunz
[package]
name = "pingpong"
rust-version = "1.81.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Ping/Pong example measuring the roundtrip time"
publish = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[[bin]]
name = "ping"
path = "src/ping.rs"

[[bin]]
name = "pong"
path = "src/pong.rs"

[dependencies]
chrono = "0.4.34"
dimas = { version = "0.4.0", features = ["unstable"] }
hostname = "0.4.0"

[build-dependencies]

[dev-dependencies]
