# Copyright © 2024 Stephan Kunz
[package]
name = "pubsub"
rust-version = "1.81.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Publisher/Subscriber example"
publish = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[[bin]]
name = "subscriber"
path = "src/subscriber.rs"

[dependencies]
dimas = { version = "0.4.0", features = ["unstable"] }

[build-dependencies]

[dev-dependencies]
