[package]
name = "mandalay"
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dimas = { workspace = true }
messages = { path = "../messages" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
