[package]
name = "messages"
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
dimas = { workspace = true }
rand = "0.8"

[lints]
workspace = true
